<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OnePayActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="56dp"
            android:text="@string/label_one_pay"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWalletBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/format_dollar"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btnAddMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_action"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/action_add_money"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/tvWalletBalance"
            app:layout_constraintStart_toStartOf="@+id/tvWalletBalance"
            app:layout_constraintTop_toBottomOf="@+id/tvWalletBalance" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/btnAddMoney"
            app:layout_constraintStart_toStartOf="@+id/btnAddMoney"
            app:layout_constraintTop_toBottomOf="@+id/btnAddMoney">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount"
                android:inputType="numberSigned"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGPay"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_action_gpay"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/action_from_gpay"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tilAmount"
            app:layout_constraintStart_toStartOf="@+id/tilAmount"
            app:layout_constraintTop_toBottomOf="@+id/tilAmount" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvRecentTrasnsaction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelRecent" />

        <TextView
            android:id="@+id/tvLabelRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_recent_transaction"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGPay" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>